--- a/Back-End/SpringSecurityAuth/src/main/resources/application.properties
+++ b/Back-End/SpringSecurityAuth/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFt
 server.port=9000
 
 #log level configuration
-logging.level.root=error
+logging.level.root=info
 logging.level.con.chatop=info
 logging.level.org.springframework.boot.autoconfigure.h2=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
@@ -19,3 +19,8 @@ spring.h2.console.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/chatop
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
