Modification fichier application propreties

--- a/Back-End/SpringSecurityAuth/src/main/resources/application.properties
+++ b/Back-End/SpringSecurityAuth/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=SpringSecurityAuth
+spring.config.import=optional:classpath:application-secrets.properties
 
 # Server port
 server.port=3001
