Feature: Premiere implémentation du rentals & message mais ne fonctionne pas

--- a/Back-End/SpringSecurityAuth/src/main/resources/application.properties
+++ b/Back-End/SpringSecurityAuth/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Swagger
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+## Picture upload config
+spring.servlet.multipart.max-file-size = 3MB
+pictures.path=src/main/resources/pictures/
+pictures.db.path=/api/pictures/
