--- a/Back-End/SpringSecurityAuth/src/main/resources/application.properties
+++ b/Back-End/SpringSecurityAuth/src/main/resources/application.properties
@@ -25,5 +25,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 ## Picture upload config
 spring.servlet.multipart.max-file-size = 3MB
-pictures.path=src/main/resources/pictures/
-pictures.db.path=/api/pictures/
+pictures.path=C:/Users/axel2/Documents/rentalsPictures/
